feat: add initial HTML structure and favicon

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Apostas Desportivas em Angola - Elephant Bet" />
+    <link rel="icon" type="image/png" href="%PUBLIC_URL%/logomarca-icone.png" />
     <title>Elephant Bet Angola | Apostas Desportivas</title>
 </head>
 
