feat: Add base index.html file with initial HTML structure and metadata

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Apostas Desportivas em Angola - Elephant Bet" />
     <link rel="icon" type="image/png" href="%PUBLIC_URL%/logomarca-icone.png" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/logomarca-icone.png" type="image/x-icon" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logomarca-icone.png" />
     <title>Elephant Bet Angola | Apostas Desportivas</title>
 </head>
 
